Refactor service interfaces and implementations to use ports
- Updated ApiKeyController, ProfileController, RecommendationController, and WatchlistController to use port interfaces instead of service implementations.
- Refactored service classes (GeminiApiKeyService, HistoryService, ProfileService, RecommendationService, WatchlistService) to implement their respective port interfaces.
- Introduced new port interfaces for various services in the identity and content modules.
- Added TmdbProperties configuration for managing TMDB API settings.
- Implemented TmdbUrlBuilder for constructing TMDB API URLs.
- Enhanced CacheMonitorController to use Redis SCAN for non-blocking key retrieval.
- Updated application.yaml to change Hibernate ddl-auto setting from update to validate.
- Added ApiErrorResponse class for standardized error responses.
- Created StreamProvider entity and related service ports for content management.
- Introduced new service ports for Anime, Banner, Explore, Movie, Search, Stream URL, TV details, and Player services.